# claude-code-harness

./: .env.example  .gitignore  ARCHITECTURE_GAP_ANALYSIS.md  CHANGELOG.md  CODE_REVIEW.md  FEATURES_GAP.md  LICENSE  NSFC_Proposal_Cardiovascular_DDS.md  README.md  app_context.py  main.py  pyproject.toml  pytest.ini  query_engine.py  requirements.txt  start.sh  test_error_recovery.py  test_fixes.py
agent/: __init__.py  agent_manager.py  agent_runner.py  coordinator.py  enums.py  examples.py  explore_agent.py  plan_agent.py  task.py  task_queue.py  test_agent.py
agents/: __init__.py  built_in.py  engine.py  fork.py  tool.py  types.py
config/: __init__.py  models.py
data/: claude_code.db  claude_code.db.backup
example_skill/: skill.json  skill.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
models/: __init__.py
plan/: __init__.py  manager.py  storage.py  tools.py  types.py
routers/: __init__.py  agents.py  chat_legacy.py  data_router.py  models.py  plan.py  team_router.py
schemas/: __init__.py
services/: __init__.py  chat_stream.py  config_service.py  conversation_service.py  conversation_title.py  llm_service.py  plan_service.py  skill_manager.py  task_service.py  team_service.py
static/: chat.html  index.html
tests/: conftest.py  test_context_compaction.py  test_error_recovery.py
tools/: COMPARISON_REPORT.md  __init__.py  agent_tool.py  ask_user_tool.py  base.py  bash_tool.py  branch_tools.py  brief_tool.py  config_tool.py  file_tools.py  git_tools.py  hooks_tools.py  (+25 more)
(+54 files in other folders)
